# trolley-problem-simulator

./: Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
src/: animation.rs  assets.rs  components.rs  constants.rs  embed_assets.rs  end_screen.rs  game.rs  main.rs  menu.rs  resources.rs  scenario.rs  states.rs  summary.rs  util.rs
