[package]
name = "trolley-problem-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["mp3"] }
rand = "0.8"
typed-builder = "0.20"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Optimize for size
[profile.release]
opt-level = 'z'
